.travis.yml: Install SWIG and flex packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler: gcc
 before_install:
   - sudo add-apt-repository --yes ppa:ktm5j/uva-cs-ppa
   - sudo apt-get update
-install: sudo apt-get install libboost-dev liblbfgs-dev
+install: sudo apt-get install libboost-dev liblbfgs-dev swig flex
 script:
   - make
   - make reranker
