Added constrained parsing option, various other improvements New constrained parsing mechanism: This allows for partially or completely constrained parses (each constraint takes the form of a span and a set of possible labels allowed to cover that span). There was a previous mechanism for this, but it had many quirks which made it unintuitive to use. The new mechanism requires the exact parsing constraints to be decided before parsing time. A new class, SpanConstraints, handles the tricky aspects of this so that only the required constraints need to be expressed. The Python parse_constrained() method makes it even easier.
SimpleAPI.C: The non-SWIG functions of wrapper.i have been refactored
into the new SimpleAPI.C, similar in spirit to simple-api.cc in the
second-stage.

SWIG generated files now go in the swig/ subdirectories to keep them
separate.

Details:
first-stage/PARSE/SimpleAPI.C: In addition to above refactoring:
    - main parse() method uses new constrained parsing system
    - added LabeledSpan and SpanConstraints classes which help determine
      chart guides for constrained parsing
    - treeLogProb() uses new constrained parsing system
    - new functions: getParseStats() and fscore()

first-stage/PARSE/ChartBase.[Ch]: simplified constrained parsing
    mechanism for new system

first-stage/PARSE/evalTree.C: massively simplified by moved to new
    constrained parsing/SimpleAPI

setup.py: separate SWIG wrapper file better, add include directory so
    we can find SimpleAPI.[Ch]

.hgignore: ignore new SWIG wrapper file, .swo files (old locations are still
    ignored for now)

first-stage/PARSE/Makefile: evalTree now depends on SimpleAPI,
    clean new SWIG wrapper file location

first-stage/PARSE/swig/python/test/test.py: updated to use new parsing API

first-stage/PARSE/swig/java/test/test.java: updated to use new parsing API,
    *and* un-bit-rotted

first-stage/README.rst: updates about evalTree, minor edits

python/bllipparser/RerankingParser.py

--- a/.hgignore
+++ b/.hgignore
@@ -32,7 +32,7 @@ glob:second-stage/programs/wlle/gavper
 glob:second-stage/programs/wlle/cvlm
 glob:second-stage/programs/wlle/cvlm-lbfgs
 glob:second-stage/programs/wlle/oracle
-glob:*.swp
+glob:*.sw[op]
 glob:*.orig
 glob:tags
 glob:TAGS
@@ -52,6 +52,8 @@ glob:build*
 glob:dist*
 glob:first-stage/PARSE/parser_wrapper.C
 glob:second-stage/programs/features/reranker_wrapper.C
+glob:first-stage/PARSE/swig/wrapper.C
+glob:second-stage/programs/features/swig/wrapper.C
 glob:python/bllipparser/CharniakParser.py
 glob:python/bllipparser/JohnsonReranker.py
 glob:MANIFEST
