.travis.yml: Print out SWIG version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_install:
   - sudo add-apt-repository --yes ppa:ktm5j/uva-cs-ppa
   - sudo apt-get update
 install: sudo apt-get install libboost-dev liblbfgs-dev swig flex python-nose
+before_script:
+  - swig -version
 script:
   - make
   - make reranker
