Add Syntactic Parse Fusion Combines n-best lists by reparsing resulting in a significant improvement. Details: Syntactic Parse Fusion (Choe, McClosky, and Charniak, EMNLP 2015)
This is a command-line implementation (Python version and more docs coming
later).

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
 script:
   - make
   - make reranker
+  - make -C first-stage/PARSE all
   - make -C second-stage/programs/features parallel-tools
   - make sparseval
   - sudo python setup.py install
