Add Python 3 support (issue #26) Thanks to @pkclaus for the initial draft! Most conversion was done with 2to3. A couple items of note:
The bllipparser package now depends on the six module.

Doctests don't completely pass in Python 3 yet (due to precision differences).
It's time to rewrite these as proper tests. Until this is the case,
"python setup.py test" won't run Py3 tests nor will Travis CI.

Converted setup.py to (optionally) use setuptools. Should still work without
it but will give some warnings about extra fields. Unfortunately, this means
that version numbers must now be normalized and the current version
(2015.08.18) is no longer valid. To eliminate confusion, I'm bumping the
development version.

To simplify packaging, we move to using -builtin with swig. This means that
swig doesn't need to generate a proxy class file (we would need different
versions for Python 2 and Python 3). Downside is that special methods no
longer work by default and some (like __str__) were tough to get working.
However, since nobody calls these directly, this shouldn't be an issue.

RerankingParser.py:
  NBestList can no longer delegate methods. Added the four common ones.
  Filename checking in RerankingParser factored out to _check_path_or_error()
  DeprecatedGetter does not work with Python 3. Since it has been around
    for about a year, it is being removed and the properties it was attached
    to are now pure properties.

--- a/.hgignore
+++ b/.hgignore
@@ -62,3 +62,4 @@ glob:second-stage/programs/features/swig/wrapper.C
 glob:python/bllipparser/CharniakParser.py
 glob:python/bllipparser/JohnsonReranker.py
 glob:MANIFEST
+glob:bllipparser.egg-info
