Convert doctests -> unittests, add coverage testing
python/*/test_*.py: mostly the same, some new tests after unittest-ification.
  reprs and exact strings of error messages are no longer as thoroughly tested.
setup.py: "python setup.py test" only tests with the current version
  of Python. We should probably move to tox for multi-version testing.
.*ignore: ignore .coverage files
.hgignore: factor out glob, has the bonus of making it match .gitignore better

--- a/.hgignore
+++ b/.hgignore
@@ -1,65 +1,67 @@
-glob:*.dep
-glob:*.o
-glob:*.a
-glob:*.d
-glob:second-stage/programs/*/read-tree.cc
-glob:evalb/evalb
-glob:first-stage/PARSE/parseIt
-glob:first-stage/PARSE/fusion
-glob:first-stage/PARSE/evalTree
-glob:first-stage/PARSE/parseAndEval
-glob:first-stage/TRAIN/iScale
-glob:first-stage/TRAIN/kn3Counts
-glob:first-stage/TRAIN/pSfgT
-glob:first-stage/TRAIN/pSgT
-glob:first-stage/TRAIN/pTgNt
-glob:first-stage/TRAIN/pUgT
-glob:first-stage/TRAIN/rCounts
-glob:first-stage/TRAIN/selFeats
-glob:first-stage/TRAIN/trainRs
-glob:second-stage/programs/eval-beam/main
-glob:second-stage/programs/eval-weights/best-indices
-glob:second-stage/programs/eval-weights/best-parse
-glob:second-stage/programs/eval-weights/best-parses
-glob:second-stage/programs/eval-weights/eval-weights
-glob:second-stage/programs/eval-weights/pretty-print
-glob:second-stage/programs/features/best-*parses
-glob:second-stage/programs/features/count-*features
-glob:second-stage/programs/features/extract-*features
-glob:second-stage/programs/features/oracle-score
-glob:second-stage/programs/features/parallel-extract-nfeatures
-glob:second-stage/programs/features/parallel-extract-spfeatures
-glob:second-stage/programs/prepare-data/copy-trees-ss
-glob:second-stage/programs/prepare-data/prepare-ec-data
-glob:second-stage/programs/prepare-data/prepare-ec-data100
-glob:second-stage/programs/prepare-data/prepare-new-data
-glob:second-stage/programs/prepare-data/ptb
-glob:second-stage/programs/wlle/avper
-glob:second-stage/programs/wlle/cvlm
-glob:second-stage/programs/wlle/cvlm-lbfgs
-glob:second-stage/programs/wlle/gavper
-glob:second-stage/programs/wlle/oracle
-glob:*.sw[op]
-glob:*.orig
-glob:tags
-glob:TAGS
-glob:*.py[co]
-glob:*.class
-glob:*.so
-glob:*_wrapper.cxx
-glob:second-stage/programs/features/swig/*/lib/*
-glob:second-stage/programs/features/swig/*/build/*
-glob:first-stage/PARSE/swig/*/lib/*
-glob:first-stage/PARSE/swig/*/build/*
-glob:SParseval/*
-glob:regression-test-*
-glob:build*
-glob:dist*
-glob:first-stage/PARSE/parser_wrapper.C
-glob:second-stage/programs/features/reranker_wrapper.C
-glob:first-stage/PARSE/swig/wrapper.C
-glob:second-stage/programs/features/swig/wrapper.C
-glob:python/bllipparser/CharniakParser.py
-glob:python/bllipparser/JohnsonReranker.py
-glob:MANIFEST
-glob:bllipparser.egg-info
+syntax: glob
+*.dep
+*.o
+*.a
+*.d
+second-stage/programs/*/read-tree.cc
+evalb/evalb
+first-stage/PARSE/parseIt
+first-stage/PARSE/fusion
+first-stage/PARSE/evalTree
+first-stage/PARSE/parseAndEval
+first-stage/TRAIN/iScale
+first-stage/TRAIN/kn3Counts
+first-stage/TRAIN/pSfgT
+first-stage/TRAIN/pSgT
+first-stage/TRAIN/pTgNt
+first-stage/TRAIN/pUgT
+first-stage/TRAIN/rCounts
+first-stage/TRAIN/selFeats
+first-stage/TRAIN/trainRs
+second-stage/programs/eval-beam/main
+second-stage/programs/eval-weights/best-indices
+second-stage/programs/eval-weights/best-parse
+second-stage/programs/eval-weights/best-parses
+second-stage/programs/eval-weights/eval-weights
+second-stage/programs/eval-weights/pretty-print
+second-stage/programs/features/best-*parses
+second-stage/programs/features/count-*features
+second-stage/programs/features/extract-*features
+second-stage/programs/features/oracle-score
+second-stage/programs/features/parallel-extract-nfeatures
+second-stage/programs/features/parallel-extract-spfeatures
+second-stage/programs/prepare-data/copy-trees-ss
+second-stage/programs/prepare-data/prepare-ec-data
+second-stage/programs/prepare-data/prepare-ec-data100
+second-stage/programs/prepare-data/prepare-new-data
+second-stage/programs/prepare-data/ptb
+second-stage/programs/wlle/avper
+second-stage/programs/wlle/cvlm
+second-stage/programs/wlle/cvlm-lbfgs
+second-stage/programs/wlle/gavper
+second-stage/programs/wlle/oracle
+*.sw[op]
+*.orig
+tags
+TAGS
+*.py[co]
+*.class
+*.so
+*_wrapper.cxx
+second-stage/programs/features/swig/*/lib/*
+second-stage/programs/features/swig/*/build/*
+first-stage/PARSE/swig/*/lib/*
+first-stage/PARSE/swig/*/build/*
+SParseval/*
+regression-test-*
+build*
+dist*
+first-stage/PARSE/parser_wrapper.C
+second-stage/programs/features/reranker_wrapper.C
+first-stage/PARSE/swig/wrapper.C
+second-stage/programs/features/swig/wrapper.C
+python/bllipparser/CharniakParser.py
+python/bllipparser/JohnsonReranker.py
+MANIFEST
+bllipparser.egg-info
+.coverage
