--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler: gcc
 before_install:
   - sudo apt-get update
 install:
-  - sudo apt-get install libboost-dev liblbfgs-dev swig flex python-nose
+  - sudo apt-get install -y libboost-dev liblbfgs-dev swig flex python-nose
   - sudo pip install python-coveralls
   - sudo pip install tox
 before_script:
