Makefile: add "make world" target This is the target which Travis CI will use.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,7 @@ install:
 before_script:
   - swig -version
 script:
-  - make
-  - make reranker
-  - make -C first-stage/PARSE all
-  - make -C second-stage/programs/features parallel-tools
-  - make sparseval
+  - make world
   - tox
 after_success:
   - coveralls
