--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 before_script:
   - swig -version
 script:
-  - [ $BLLIPINTERFACE == "cmd" ] && make world
-  - [ $BLLIPINTERFACE == "python" ] && tox
+  - bash -c "[ $BLLIPINTERFACE == "cmd" ] && make world"
+  - bash -c "[ $BLLIPINTERFACE == "python" ] && tox"
 after_success:
   - coveralls
