--- a/second-stage/programs/wlle/Makefile
+++ b/second-stage/programs/wlle/Makefile
@@ -51,7 +51,7 @@ CC=gcc
 # fast options
 # Compilation help: you may need to remove -march=native on older compilers.
 GCCFLAGS=-march=native -mfpmath=sse -msse2 -mmmx
-FOPENMP=-fopenmp
+FOPENMP?=-fopenmp
 CFLAGS=-MMD -O3 -ffast-math -fstrict-aliasing -Wall -finline-functions $(GCCFLAGS) $(FOPENMP)
 LDFLAGS=$(FOPENMP)
 CXXFLAGS=${CFLAGS} -Wno-deprecated
